--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 	<h1>Nifty or bust!</h1>
+	<script src="https://cdn.tiny.cloud/1/pbvmtkq2n8gn9hj6dbdpoupxyhvag72tyr5qdphe0be4ecja/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 </body>
 </html>
